Created entry overview page

--- a/entriesOverview.html
+++ b/entriesOverview.html
@@ -25,29 +25,11 @@
         </nav>
     </header>
 
-    <!-- Potential additions/consdierations:
-     1. Validation for journal form, some things as optional like image uploads, some things required and the user unable to ,ove forward if nothing is there -->
-
     <main id="#main">
-        <!-- Filter for Journal Entries 
-        Potential Example: -->
-        <section tabindex="0">
-            <!-- not sure how things will be filtered by yet... -->
-        </section>
-
-        <!-- Journal Entry Previews-->
-        <section tabindex="0" id="entryContainer">
-            <!-- List of Previews of Journal Entries-->
-             <!-- 3 columns -->
-              <!-- 1 -->
-                <!-- Game image -->
-              <!-- 2 -->
-                <!-- Entry Title -->
-                <!-- Game Title -->
-                <!-- Tags (for filtering)-->
-              <!-- 3 -->
-                <!-- Button to open full journal entry-->
-        </section>
+      <section id="journalFilter">
+      </section>
+      <section id="allEntries">
+      </section>
     </main>
 
     <!-- Footer -->
@@ -61,6 +43,5 @@
         </p>
     </footer>
 </body>
-<script src="js/home.js" defer></script>
 <script src="js/overview.js" defer></script>
 </html>
