--- a/entry.html
+++ b/entry.html
@@ -32,36 +32,7 @@
     <!-- 
      Journal Entry Template/Layout -->
     <main id ="main"> 
-        <div id="entryContainer">
-
-                <!-- Game Intro Section(could be fetched) -->
-            <section tabindex="0">
-                <!-- Key Image -->
-                <!-- Caption -->
-                <!-- description section -->
-                <!-- Description heading -->
-                <!-- Description's paragraph -->
-            </section>
-
-            <!-- User Generated -->
-            <section tabindex="0">
-                <!-- Overall Thoughts -->
-                    <!-- Overall Image -->
-                    <!-- Caption -->
-                    <!-- Overall Thought Heading -->
-                    <!-- Overall Thoughts paragraph -->
-                <!-- Key Moment(s) -->
-                    <!-- Key moment(s) Image -->
-                    <!-- Caption -->
-                    <!-- Key Moment(s) Heading -->
-                    <!-- Key Moment(s) paragraph -->
-                <!-- Conclusion -->
-                    <!-- Conclusion Image -->
-                    <!-- Caption -->
-                    <!-- Conclusion Heading -->
-                    <!-- Conclusion paragraph -->
-            </section>
-        </div>
+        <div id="entryContainer"></div>
         <section id="otherEntries" tabindex="0">
             <!-- Game Image -->
             <!-- Entry Title -->
