--- a/entry.html
+++ b/entry.html
@@ -22,7 +22,7 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "entriesOverview.html"> Journal Entries</a></li>
+                <li><a href = "wishlist.html"> Wishlist</a></li>
                 <li><a href = "about.html">About Me</a></li>
             </ul>
         </nav>
