Completed Wishlist display

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 Example: https://developer.mozilla.org/en-US/docs/Learn_web_development/Extensions/Forms/How_to_structure_a_web_form 
                 https://stackoverflow.com/questions/17087636/how-to-save-data-from-a-form-with-html5-local-storage -->    
 
-                <form id="journalEntryForm">
+                <form id="journalEntryForm" class="hidden">
                     <fieldset class="form-group">
                       <h2><legend>Create Your Journal Entry</legend></h2>
                       <!-- User Names their journal entry -->
