--- a/wishlist.html
+++ b/wishlist.html
@@ -8,19 +8,19 @@
     <!-- TBD if removed -->
     <link rel="stylesheet" href="css/styleTest.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>About Me</title>
+    <title>Wishlist</title>
 </head>
 <body>
     <!-- Header -->
     <header>
         <a href="#main" id="skip">Skip to main content</a>
-        <h1>About Me</h1>
+        <h1>Wishlist</h1>
         <!-- navigation -->
         <nav>
             <ul>
               <li><a href = "index.html">Home</a></li>
               <li><a href = "wishlist.html"> Wishlist</a></li>
-              <li><a href = "about.html">About Me</a></li>
+              <li><a href = "about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -37,8 +37,10 @@
                           <input class="search-input" id="gameSearch" type="search" name="search" placeholder="Search for a game"/>
                           <button id="search-btn">Search</button>
                       </form>
-                      <section id="foundGames" class="hidden"></section>
-                      <!-- Where search results will appear, the user will then click on a game and it will become part of the official wishlist -->
+                      <section id="foundGames" class="hidden">
+                            <!-- Where search results will appear, the user will then click on a game and it will become part of the official wishlist -->
+                      </section>
+
                       <!-- Wishlisted Games Area -->
                       <section id="wishlistGames">
                         <h2>My Wishlist</h2>
