--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
     <!-- Header -->
     <header>
         <a href="#main" id="skip">Skip to main content</a>
-        <h1>Video Game Journal</h1>
+        <h1>579 Video Game Journal</h1>
         <!-- navigation -->
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "wishlist.html"> Wishlist</a></li>
-                <li><a href = "about.html">About Me</a></li>
             </ul>
         </nav>
     </header>
