--- a/index.html
+++ b/index.html
@@ -27,22 +27,25 @@
     </header>
     
     <main id="main">
-        <section id="journalFilter">
+      <div class="createEntryBtn">
+        <button > Create a Journal Entry</button>
+      </div>
+
+        <section  id="journalFilter">
         </section>
         <section id="allEntries">
         </section>
-        <!-- Journal Entry Form -->
-        <!-- WAVE Errors -->
-        <article id="guidelines">
-            <section tabindex="0" class="container">
-                <!-- 
 
+        <!-- Journal Entry Form -->
+        <article id="guidelines">
+            <section tabindex="0" >
+                <!-- 
                 Explanation: User inputs are captured/saved to local storage for display on the overview and individual entry pages
 
                 Example: https://developer.mozilla.org/en-US/docs/Learn_web_development/Extensions/Forms/How_to_structure_a_web_form 
                 https://stackoverflow.com/questions/17087636/how-to-save-data-from-a-form-with-html5-local-storage -->    
 
-                <form id="journalEntryForm" class="hidden">
+                <form id="journalEntryForm" style="display:none" class="hidden">
                     <fieldset class="form-group">
                       <h2><legend>Create Your Journal Entry</legend></h2>
                       <!-- User Names their journal entry -->
@@ -53,7 +56,6 @@
                         <div class="invalid-feedback">
                             Journal Entry Title is required
                          </div>
-
                       </p>
                       <!-- Video Game Information (Stuff that can be fetched to be populated) -->
                       <p>
