--- a/wishlist.html
+++ b/wishlist.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Css links -->
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/html5reset.css">
-    <!-- TBD if removed -->
     <link rel="stylesheet" href="css/styleTest.css">
     <link rel="stylesheet" href="css/style.css">
+    
     <title>Wishlist</title>
 </head>
 <body>
