--- a/wishlist.html
+++ b/wishlist.html
@@ -14,12 +14,12 @@
     <!-- Header -->
     <header>
         <a href="#main" id="skip">Skip to main content</a>
-        <h1>Wishlist</h1>
+        <h1>Welcome to Your Video Game Wishlist</h1>
         <!-- navigation -->
         <nav>
             <ul>
               <li><a href = "index.html">Home</a></li>
-              <li><a href = "wishlist.html"> Wishlist</a></li>
+              <li><a href = "wishlist.html">Wishlist</a></li>
             </ul>
         </nav>
     </header>
@@ -29,7 +29,7 @@
          <!-- Explanation: Type in game you would like to add to wishlist, press enter that game is added and that information is fetched and game is added 
                 -->
                 <article id="contribute">
-                  <section tabindex="0" class="container" >
+                  <section class="container" >
                       <!-- Search Games Area -->
                       <form id="search">
                           <label for="gameSearch">Search Games:</label>
@@ -54,11 +54,10 @@
     <footer class="page-footer">
       <div class="container">
         <p>
-          ૮꒰ ˶• ༝ •˶꒱ა 
+          ૮꒰ ˶• ༝ •˶꒱ა ♡
           <br>
           Created by <a href="https://www.linkedin.com/in/lilymadojemu/">Lily Madojemu</a> 
           <br>
-          ♡ <span id="year"></span> ♡
         </p>
   </footer>
 </body>
